<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intenciones"
        android:layout_gravity="center"
        android:textColor="#7A7878"
        android:layout_marginTop="12dp"/>
    <Button
        android:id="@+id/btnMandarMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mandar_mensaje"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="mandar_mensaje"/>
    <Button
        android:id="@+id/btnAbrirPag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/abrir_pagina_web"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="abrirPagina"/>
    <Button
        android:id="@+id/btnLLamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/llamar_por_telefono"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="llamarTelefono"/>
    <Button
        android:id="@+id/btnAbrirMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/abrir_mapa"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="verMapa"/>
    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tomar_foto"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="tomarFoto"/>
    <Button
        android:id="@+id/btnMandarCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mandar_coreo"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="mandarCorreo"/>
    <Button
        android:id="@+id/btnStreetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/street_view"
        android:background="#00ff00"
        android:layout_marginTop="12dp"
        android:onClick="streetView"/>

</LinearLayout>